[project]
name = "rpdb"
version = "0.1.0"
description = "A remote python debugger using the interface described in PEP 768 , like gdb and lldb for binary code."
authors = [
    {name = "changlehung",email = "changlehung@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
